# VocTree-Win64-Archaeo

./: CMakeLists.txt  QUERY1.bat  STARTset1.bat  tinksDone.txt
OCVinstall/x64/vc15/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_aruco341.lib  opencv_bgsegm341.lib  opencv_bioinspired341.lib  opencv_calib3d341.lib  opencv_ccalib341.lib  opencv_core341.lib  opencv_datasets341.lib  opencv_dnn341.lib  opencv_dnn_objdetect341.lib  opencv_dpm341.lib  opencv_face341.lib  opencv_features2d341.lib  opencv_flann341.lib  opencv_fuzzy341.lib  opencv_hfs341.lib  opencv_highgui341.lib  opencv_img_hash341.lib  opencv_imgcodecs341.lib  opencv_imgproc341.lib  opencv_line_descriptor341.lib  opencv_ml341.lib  opencv_objdetect341.lib  opencv_optflow341.lib  opencv_phase_unwrapping341.lib  opencv_photo341.lib  opencv_plot341.lib  opencv_reg341.lib  opencv_rgbd341.lib  opencv_saliency341.lib  opencv_shape341.lib  opencv_stereo341.lib  opencv_stitching341.lib  opencv_structured_light341.lib  opencv_superres341.lib  opencv_surface_matching341.lib  opencv_text341.lib  opencv_tracking341.lib  (+7 more)
src/: CMakeLists.txt  Catalog.cpp  Database.cpp  Database.h  ExtKmeans.cpp  FeatureMethod.cpp  FeatureMethod.h  FileHelper.cpp  Fork.cpp  Fork.h  KMeans.cpp  Server.cpp  Server.h  VocTree.cpp  VocTree.h  main.cpp
